--- a/visual/index.html
+++ b/visual/index.html
@@ -30,7 +30,7 @@
   <body>
     <div id="draw_area"></div>
 
-    <div id="instructions_panel" class="panel">
+    <div id="instructions_panel" class="panel" style="display: none;">
       <header>
         <h2 class="header_title">Instructions</h2>
         <span id="hide_instructions">hide</span>
@@ -45,8 +45,14 @@
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
 
+      <span>Tool:</span>
+      <select id="tool-select">
+	<option value="paint-hill">Paint hill</option>
+	<option value="draw-wall">Draw wall</option>
+      </select>
+
       <div class="accordion">
-        <h3 id="astar_header"><a href="#">A*</a></h3>
+        <h3 id="astar_header"><a href="#">A* + Slope</a></h3>
         <div id="astar_section" class="finder_section">
           <header class="option_header">
             <h3>Heuristic</h3>
@@ -72,6 +78,9 @@
             <label class="option_label">Don't Cross Corners</label> <br>
             <input class="spinner" name="astar_weight" value="1">
             <label class="option_label">Weight</label> <br>
+	    <input class="spinner" id="slope-weight"
+		   name="astar_slopeweight" value="1">
+            <label class="option_label">Slope weight</label> <br>
           </div>
         </div>
 
