Switched to unminified state-machine.js
While debugging, it's pretty common to have an exception thrown during a
state transition caught by the state-machine.js library. Using the
minified version makes debugging more difficult; since performance is
not a top priority, I switched to the unminified version.

--- a/visual/index.html
+++ b/visual/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
     <script type="text/javascript" src="./lib/es5-shim.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="./lib/state-machine.min.js"></script>
+    <script type="text/javascript" src="./lib/state-machine.js"></script>
     <script type="text/javascript" src="./lib/async.min.js"></script>
 
     <script type="text/javascript" src="./lib/ui/jquery.ui.core.min.js"></script>
