panel: Added plus-minus button; slight CSS tweaks

--- a/visual/index.html
+++ b/visual/index.html
@@ -62,7 +62,10 @@
 	</li>
 	<li>
 	  <label for="brush-depth">Brush depth:</label>
-	  <input type="number" id="brush-depth" value="10" />
+	  <div>
+	    <input type="number" id="brush-depth" value="10" />
+	    <button id="brush-depth-neg">&plusmn;</button>
+	  </div>
 	</li>
       </ul>
 
